package clientlogin;

//c-s 客户端 -> 服务器 90 - 1 //连接握手
message Hello_Request {
	optional uint32 version = 1;
	optional string extraData = 2;
}

//s-c 服务器 -> 客户端 90 - 2 //连接握手返回
message Hello_Return {
	optional uint32 result = 1;
	optional uint32 version = 2;
	optional string extraData = 3;
}

//c-s 客户端 -> 服务器 90 - 5 //登陆
message Login_Request {
	optional uint32 ctype = 1; //客户端类型
	optional string account = 2; //账号
	optional string password = 3; //密码
	optional string extraData = 4; //额外数据
}

//s-c 服务器 -> 客户端 90 - 6 //登陆返回
message Login_Reutrn {
	optional uint32 result = 1; //0成功，其他为失败码
	optional string accountName = 2;
	optional string baseIp = 3;
	optional uint32 basePort = 4;
	optional string extraData = 5; //额外数据
}

//message Ping{
//}
